--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,14 @@
 --- #YAML:1.0
 name:                Business-ISBN-Data
-version:             1.13
+version:             1.14
 abstract:            ~
 license:             perl
-generated_by:        ExtUtils::MakeMaker version 6.31
+generated_by:        ExtUtils::MakeMaker version 6.32
 distribution_type:   module
 requires:     
     Test::More:                    0
 meta-spec:
     url:     http://module-build.sourceforge.net/META-spec-v1.2.html
     version: 1.2
+author:
+    - brian d foy <bdfoy@cpan.org>
