--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,14 @@
 --- #YAML:1.0
 name:                Business-ISBN-Data
-version:             1.17
+version:             20081020
 abstract:            Data pack for Business::ISBN
 license:             perl
-generated_by:        ExtUtils::MakeMaker version 6.36
+author:              
+    - brian d foy <bdfoy@cpan.org>
+generated_by:        ExtUtils::MakeMaker version 6.44
 distribution_type:   module
 requires:     
     Test::More:                    0
 meta-spec:
     url:     http://module-build.sourceforge.net/META-spec-v1.3.html
     version: 1.3
-author:
-    - brian d foy <bdfoy@cpan.org>
