--- a/META.yml
+++ b/META.yml
@@ -3,25 +3,25 @@ abstract: 'Data pack for Business::ISBN'
 author:
   - 'brian d foy <bdfoy@cpan.org>'
 build_requires:
-  ExtUtils::MakeMaker: '0'
-  Test::More: '0.95'
+  ExtUtils::MakeMaker: 0
+  Test::More: 0.95
 configure_requires:
-  ExtUtils::MakeMaker: '0'
+  ExtUtils::MakeMaker: 0
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.98, CPAN::Meta::Converter version 2.140640'
+generated_by: 'ExtUtils::MakeMaker version 6.86, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: '1.4'
+  version: 1.4
 name: Business-ISBN-Data
 no_index:
   directory:
     - t
     - inc
 requires:
-  Carp: '0'
-  File::Basename: '0'
-  File::Spec::Functions: '0'
+  Carp: 0
+  File::Basename: 0
+  File::Spec::Functions: 0
 resources:
   repository: https://github.com/briandfoy/business--isbn
-version: '20140910.001'
+version: 20140910.002
